tiny hotmail connect lang change

--- a/app/views/hotmail/_auth_dialog.html.erb
+++ b/app/views/hotmail/_auth_dialog.html.erb
@@ -10,7 +10,7 @@
 		    <div class="action border-box inline-block">
           <%=text_field_tag :hotmail_email,"",
                 :class => "txt l rounded-3 border-box",
-                :placeholder => "Hotmail, outlook.com, live or msn",
+                :placeholder => "Hotmail, Outlook.com, Live or MSN",
                 :class => "enter m border-box rounded-2 inline",
                 :style => ""%>
 			  </div>
