--- a/app/views/purchases/_card.html.erb
+++ b/app/views/purchases/_card.html.erb
@@ -25,7 +25,7 @@
                     purchase.user.handle,
                     purchase.handle,
                     :src => "profile")%>" 
-            class="em light">
+            class="em light underlined">
             <%=h purchase.title%></a>
 		
 		      <%if purchase.store%>
