--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -196,6 +196,10 @@ li { line-height: 1; }
 
 /* -- notifications count -- */
 
+.header .btn-group .btn.btn-red { 
+	background-color: #C42418;
+	text-shadow: 0 1px 1px rgba(0,0,0, 0.25); }
+
 .header .btn-group .btn.btn-red.dropdown-toggle {
 	height: 28px; 
 	min-width: 28px; 
