--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -11,21 +11,21 @@
 
 
 <!-- email importer box -->
-<div class="well-box border-box rounded-8 rwd-hide" 
+<div class="well-box border-box rounded-8 rwd-hide unselectable" 
   style="margin: 2px 0 12px;">
-  <div class="user-action-box relative" style="border: none !important; margin-bottom: -9px;">
+  <div class="user-action-box relative unselectable" style="border: none !important; margin-bottom: -9px;">
     <%=image_tag "import-star-ccc-32-2x.png",
           :style => "width: 32px; top: 0; left: 0;",
           :class => "absolute opacity-80"%>		
 
-    <div class="txt m top-line opacity-80">
+    <div class="txt m top-line opacity-80 unselectable">
       <%if self.current_user.email_authorized?%>
         Great, you're connected
       <%else%>
         Start your Mine
       <%end%>
     </div>
-    <span class="txt s bottom-line opacity-80" href="javascript:void(0)">
+    <span class="txt s bottom-line opacity-80 unselectable" href="javascript:void(0)">
       <%if self.current_user.email_authorized?%>
         Checking for new purchases in: <%=pluralize days_to_email_import,"day"%>
       <%else%>
