--- a/app/views/headers/_default.html.erb
+++ b/app/views/headers/_default.html.erb
@@ -72,7 +72,7 @@
 	
 	          <ul class="dropdown-menu nav pull-right rounded-3">
 	            <li class="txt s">
-	              <%=link_to "Your items",
+	              <%=link_to "Your Mine",
 	                  user_path(self.current_user.handle,:src => "bar")%>
 	            </li>
 	            <li class="txt s">
