--- a/app/views/purchases/_input.html.erb
+++ b/app/views/purchases/_input.html.erb
@@ -40,7 +40,7 @@
         <a href="javascript:void(0)" 
             class="btn btn-small btn-white rounded-3"
             id="purchase_change_photo">
-          Change photo
+          Change image
         </a>
       </div>
       
@@ -48,7 +48,7 @@
 		    <%=link_to "<i class='icon-trash'></i>",
 		        {:action => 'destroy',:id => f.object.id},
 		        :method  => :delete,
-		        :class   => 'btn btn-small btn-white rounded-3',
+		        :class   => 'btn btn-small btn-white rounded-3 transition-opacity opacity-60-100',
 		        :confirm => "Are you sure you want "\
 		                    "to delete this item?" if show_delete_button%>
 	    </div>                
