--- a/app/views/purchases/show/_logged_in.html.erb
+++ b/app/views/purchases/show/_logged_in.html.erb
@@ -1,5 +1,5 @@
 
-  <div class="box-title" style="margin-top: -6px;">
+  <div class="box-title" style="margin-top: -6px; padding-bottom: 14px;">
   <%=link_to @purchase.user.first_name,
         user_path(@purchase.user.handle,:src => 'gallery'), 
         :class => "dark"%>
