feed line-height  Please enter the commit message for your changes. Lines starting

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -646,6 +646,7 @@ a.feed-intro .highlight { font-weight: bold; }
 	color: #555;
 	font-weight: bold;
 	min-height: 48px;
+	line-height: 140%;
 	padding: 0 34px 0 50px;
 	margin-top: -3px; }
 
