--- a/app/views/footers/_default.html.erb
+++ b/app/views/footers/_default.html.erb
@@ -1,9 +1,10 @@
 <footer>
-  <div class="inner relative border-box">
+  <div class="inner relative border-box unselectable">
   	
+  	<!--
 	  <div class="like-button-box absolute border-box">
 	    <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2FMine%2F428223863873172&amp;send=false&amp;layout=button_count&amp;width=86&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=21&amp;appId=245230762190915" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:86px; height:21px;" allowTransparency="true"></iframe>
-	  </div> <!-- /like-button-box -->
+	  </div> <!-- /like-button-box
 	  
 	  <div class="twitter-button-box absolute border-box rwd-hide">
 	    <a href="https://twitter.com/getmine" class="twitter-follow-button" data-show-count="true" data-show-screen-name="false">
@@ -11,7 +12,8 @@
 			<script>
 				!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 			</script> 
-	  </div> <!-- /twitter-button-box -->
+	  </div> <!-- /twitter-button-box
+	  -->
   
   	<ul>
   		<li class="rwd-hide">
