--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -8,7 +8,11 @@ body {
 	color: white;
 	text-rendering: optimizelegibility;
 	overflow-x: hidden;
-	background: #f8f8f8; }
+	background: #333;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	background-image: url("/images/home/home-iphone-covering-cropped.jpg"); }
 	
 a:hover { text-decoration: none; }
 	
@@ -16,64 +20,133 @@ a:hover { text-decoration: none; }
 	min-height: 100%;
 	height: auto !important;
 	height: 100%;
-	margin: 0 auto -32px; }
+	margin: 0 auto -72px; }
 	
-.dark-top { 
-	position: absolute;
-	z-index: -1;
-	top: 0;
-	width: 100%;
-	height: 450px;
-	background: #2D3538 /* url('/images/backgrounds/bg-strip.png') repeat-x top left */; }
-
-.header-home { text-align: center; width: 904px; margin: 0 auto; }
-.header-home .logo-home { padding: 18px 0 12px; height: 68px; }
-
-.header-home .app-store-badge { 
-	left: 24px; 
-	top: 50%;
-	margin-top: -20px; }
-
-.header-home .app-store-badge img { height: 40px; }
-
-.header-home .btn-login { 
-	right: 24px; 
-	top: 50%;
-	margin-top: -20px;
-	width: 80px; }
-
-.container-home {
-	width: 100%; }
-	
-.video-frame { 
-	background: black;
-	text-align: center; }
-	
-h2 {
-	padding: 26px 0 22px;
-	font-size: 26px;
-	text-align: center;
-	font-weight: normal;
-	color: #eee;
-	letter-spacing: -1px; }
-	
-h2 .user-photo.xxl {
-	margin-right: 12px; 
-	vertical-align: -16px; }
-
-h3 {
-	padding: 10px 0 10px;
-	font-size: 20px;
-	font-weight: normal;
-	color: #888;
-	letter-spacing: -1px; }
-	
-p { 
-	font-size: 13px;
-	line-height: 145%;
-	color: #777; }
-
 ul { margin: 0 !important; }
+
+
+/* ----- nav ----- */
+
+.nav { 
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 44px;
+	padding: 0 5.46875%; 
+	background: #333;
+	line-height: 44px;
+	font-size: 12px;
+	color: #ccc;
+	text-align: right; }
+
+.nav a, footer a { 
+	color: white;
+	opacity: .8;
+	filter: alpha(opacity=80);
+	-webkit-transition: opacity .15s ease-in!important;
+	-moz-transition: opacity .15s ease-in!important;
+	-o-transition: opacity .15s ease-in!important;
+	transition: opacity .15s ease-in!important; }
+
+.nav a:hover, footer a:hover { color: white; opacity: 1.0; filter: alpha(opacity=100);}
+
+
+/* ----- main ----- */
+
+.home-container { 
+	height: 456px;
+	top: 50%;
+	margin: -239px /* 5.46875% */ 10.9375%; }
+
+.mine-logo { height: 60px; padding: 0 0 6px; }
+
+h1, h2 {
+	font-family: "HelveticaNeue-Light", 
+	"Helvetica Neue Light", 
+	"Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300;
+  line-height: 120%; }
+
+h1 { font-size: 50px; line-height: 120%; letter-spacing:-1px }
+h2 { font-size: 26px; }
+
+.btn-join { margin: 16px 0; }
+
+
+/* ----- popovers ----- */
+
+.login .popover { 
+	margin-right: -16px;
+	top: 38px !important;
+	left: auto !important; 
+	right: 5.46875% !important; }
+
+.popover-inner { 
+	width: 200px;
+	padding: 0;
+	-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2) !important;
+	-moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2) !important;
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2) !important;
+	-webkit-border-radius: 3px !important;
+	-moz-border-radius: 3px !important;
+	border-radius: 3px !important; }
+
+.popover-inner .popover-title { display: none; }
+.popover-inner .popover-content { 
+	background: #eee;
+	padding: 0;
+	height: 52px;
+	-moz-box-sizing: border-box; 
+	-webkit-box-sizing: border-box; 
+	box-sizing: border-box; }
+
+.popover.right .arrow { /* login */
+	top: 50%;
+	left: -3px;
+	margin-top: -8px;
+	border-top: 8px solid transparent;
+	border-right: 8px solid #eee;
+	border-bottom: 8px solid transparent; }
+	
+.popover.bottom .arrow { /* join */
+	top: -3px;
+	left: auto;
+	right: 25px;
+	margin-left: -8px;
+	border-right: 8px solid transparent;
+	border-bottom: 8px solid #eee;
+	border-left: 8px solid transparent; }
+
+
+/* ----- footer ----- */
+
+footer, .push {
+	height: 72px;
+	line-height: 72px;
+	font-size: 12px;
+	font-weight: bold; }
+	
+footer .inner {
+	margin: 0 5.46875% 0 10.9375%; }
+
+footer .inner ul li { 
+	display: inline;
+	margin: 0 4px; }
+	
+footer, footer a, footer a:hover {  }
+footer .like-button-box {
+	height: 26px; 
+	bottom: 0; 
+	overflow: hidden; }
+	
+footer .twitter-button-box {
+	height: 26px; 
+	left: 96px;
+	bottom: 0; 
+	overflow: hidden; }
+	
+	
+/* ----- other ----- */
 
 .rwd-show { display: none; }
 
@@ -85,59 +158,6 @@ ul { margin: 0 !important; }
 	line-height: 51px !important; }
 
 .btn-facebook { border-left: 1px solid rgba(0,0,0,0.1); }
-
-.more { width: 880px; margin: 0 auto; padding-top: 32px; }
-.more.samples { margin-top: -24px; padding-top: 50px; }
-
-
-.col-3 { 
-	width: 30%;
-	margin: 0 1.5%;
-	display: inline-block;
-	text-align: left; 
-	vertical-align: top; }
-	
-.cell { 
-	height: 78px;
-	display: inline-block;
-	background: white;
-	margin-bottom: 14px;
-	padding: 13px 26px 11px 76px;
-	font-size: 13px;
-	line-height: 18px;
-	color: #888; 
-	background: #f8f8f8; }
-
-.cell.empty { 
-	text-align: center;
-	width: 100%;
-	line-height: 52px;
-	background: white;
-	padding: 13px 13px 11px; }
-
-.cell:hover { 
-	color: #777;
-	background: white;
-	-webkit-transition: background .15s ease-in;
-	-moz-transition: background .15s ease-in;
-	-o-transition: background .15s ease-in;
-	transition: background .15s ease-in; }
-
-.cell i {
-	bottom: 14px;
-	right: 10px;
-	opacity: 0.5;
-	filter: alpha(opacity=50); }
-	
-.cell:hover i {
-	opacity: 0.7;
-	filter: alpha(opacity=70); }
-	
-.cell .user-photo { 
-	left: 14px; 
-	top: 14px;
-	width: 50px;
-	height: 50px; }
 	
 .modal.eyeglass { 
 	text-align: left;
@@ -146,9 +166,7 @@ ul { margin: 0 !important; }
 	background: #999 url('/images/loading/loading-snake-FFF-999.gif') center no-repeat;
 	margin-left: -298px;
 	margin-top: 0;
-/* 	top: 48px; */
 	top: 94px;
-/* 	height: 600px; */
 	bottom: 110px;
 	border: 0;
 	overflow: visible !important; }
@@ -179,59 +197,15 @@ ul { margin: 0 !important; }
 
 .spacer { height: 48px; } 
 
-footer { text-align: center; }
 
-footer, .push {
-	height: 32px;
-	line-height: 32px;
-	font-size: 12px; }
-	
-footer .inner {
-	width: 880px;
-	margin: 0 auto; }
-
-footer .inner ul li { 
-	display: inline;
-	margin: 0 4px; }
-	
-footer, footer a, footer a:hover { color: #bbb; }
-footer .like-button-box {
-	height: 26px; 
-	bottom: 0; 
-	overflow: hidden; }
-	
-footer .twitter-button-box {
-	height: 26px; 
-	left: 96px;
-	bottom: 0; 
-	overflow: hidden; }
-	
-	
+@media screen and (max-width: 850px) { .coverage { display: none; } }
 @media screen and (max-width: 575px) { /* smaller than modal to avoid ie bug on modal-show */
  
  .header-home, .container, footer .inner { width: 100%; }
  footer { padding: 0 11px; text-align: right; }
  .header-home .logo-home { height: 44px; padding-top: 16px; }
  .header-home .btn-login { right: 14px; height: 32px; line-height: 32px !important; margin-top: -16px; font-size: 13px; }
-
  
- .dark-top { height: 320px; }
- 
- h2 .user-photo.xxl { 
- 	height: 24px;
- 	margin-right: 6px;
- 	vertical-align: -4px; }
- 
- .video-frame iframe { 
-	 	padding: 0; 
-	 	width: 100% !important; 
-		height: 142px;
-	 	-webkit-border-radius: 0 !important;
-		-moz-border-radius: 0 !important;
-		border-radius: 0 !important; }
-	h2 { font-size: 18px; line-height: 140%; padding: 14px 0 19px; }
-	h3 { font-size: 15px; line-height: 140%; padding: 0 0 7px; letter-spacing: normal; }
-	p { font-size: 13px; line-height: 140%; padding-bottom: 5px; }
 	.btn-twitter, .btn-facebook, .btn-join { width: 120px; height: 44px; font-size: 14px; line-height: 42px !important; }
 	
 	.btn.btn-large img.t-box { height: 14px; }
@@ -248,14 +222,7 @@ footer .twitter-button-box {
 	
 	.modal.eyeglass.join .modal-body { height: 160px !important; }
 	.modal.eyeglass.login .modal-body { height: 128px !important; }
-	
-	.more { width: 100%; padding-top: 19px; }
-	.more.samples { padding-top: 44px;}
-	
-	.col-3 { width: 90%; margin: 0 5%; }
-	
-	.cell { margin: 0 0 18px; width: 95%; }
-	
+		
 	.rwd-show { display: inline-block !important; }
 	.rwd-hide { display: none !important; }
 
