max height fix for unapproved purchases.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -538,7 +538,7 @@ a.feed-intro .highlight { font-weight: bold; }
 .feed.grid .item .panel .title-box { 
 	text-align: left;
 	font-size: 12px;
-	max-height: 52px;
+	/*max-height: 52px;*/
 	min-height: 0;
 	padding-left: 34px;
 	overflow: hidden;
