popover display fix

--- a/app/views/home/_hulu.html.erb
+++ b/app/views/home/_hulu.html.erb
@@ -51,7 +51,7 @@
 
 
 
-<div id="join_content">
+<div id="join_content" style="display: none;">
 
 	<a href="<%=fb_auth_path(:src => @origin,:target => params[:target])%>" 
 	    onclick="this.className += ' load';"
@@ -83,7 +83,7 @@
 
 
 
-<div id="login_content">
+<div id="login_content" style="display: none;">
 
 	<a href="<%=fb_auth_path(:src => @origin,:target => params[:target])%>" 
 	    onclick="this.className += ' load';"
