--- a/app/views/hotmail/_auth_dialog.html.erb
+++ b/app/views/hotmail/_auth_dialog.html.erb
@@ -25,7 +25,8 @@
                 :class => "enter m border-box rounded-2 inline"%>
 			  </div>
 		    <div class="extras txt s border-box inline-block">
-		    	<i class="icon-lock icon-white opacity-50"></i>
+		    	<%=image_tag "icons/gray-icon-lock.png",
+          		:class => ""%>
 		    </div>
 	    </div>
 	    
@@ -47,7 +48,7 @@
 		    </div>
 	    </div>
 	    
-  	  <%=image_tag "logos/hotmail-brands-2x.png",
+  	  <%=image_tag "logos/hotmail-brands-mid-2x.png",
           :class => "hotmail-brands"%>
     
     </div> <!--/hotmail-connect -->
